# QUERION-BACKEND

./: .env.example  .gitignore  custom_types.py  data_loader.py  main.py  pyproject.toml  requirements.txt  vector_db.py
