[project]
name = "querion-backend"
version = "0.2.0"
description = "Querion RAG backend — FastAPI + Qdrant + OpenRouter"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.20",
]

[tool.poetry]
package-mode = false
